# wc-leadgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: CAN_SPAM_COMPLIANCE.md  COMPLIANCE.md  DEMO.md  LAUNCH_PACK.md  REPO_HEALTH.md
examples/: batch_run.sh  dnc.txt  email_meta.json  lead_routing_demo.py  leads.csv  leads.json  partners.json
tests/: test_cli.py  test_compliance.py  test_pipeline.py  test_routing.py  test_scoring.py
wcleadgen/: __init__.py  cli.py  compliance.py  models.py  pipeline.py  routing.py  scoring.py
