[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wcleadgen"
version = "0.1.0"
description = "Reference pipeline for workers'-comp premium-audit lead-gen: explainable scoring, fail-closed compliance gating, deterministic consult routing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Denis Redzic" }]
keywords = [
    "lead-generation",
    "workers-compensation",
    "compliance",
    "tcpa",
    "can-spam",
    "lead-scoring",
    "routing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Office/Business",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[project.scripts]
wcleadgen = "wcleadgen.cli:main"

[project.urls]
Homepage = "https://github.com/redzicdenis08-afk/wc-leadgen"
Issues = "https://github.com/redzicdenis08-afk/wc-leadgen/issues"

[tool.hatch.build.targets.wheel]
packages = ["wcleadgen"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
